add API documentation SystemRoomController
